--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "netlify-cli": "^17.15.7",
     "tw-animate-css": "^1.3.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
