--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "@upstash/redis": "^1.35.0",
+    "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "netlify-cli": "^17.15.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
+    "netlify-cli": "^17.15.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
